# randoms-and-primes

./: main.py  pyproject.toml
primality/: exceptions.py  fermat.py  miller_rabin.py  tests.py
prng/: linear_congruential_generator.py  tests.py  utils.py  xorshift.py
